# dvs

./: .env.example  .gitattributes  .gitignore  404.html  Makefile  README.md  benchmark.py  download_db.sh  duckdb_vss_api.py  index.html  mkdocs.yml  openapi.json  pyproject.toml  requirements-all.txt  requirements.txt  sitemap.xml
docs/: index.md
dvs/: __init__.py  _dvs.py  app.py  app_builder.py  config.py
dvs/db/: api.py
dvs/db/documents/: api.py
dvs/db/manifest/: api.py
dvs/db/points/: api.py
dvs/resources/manifest/: api.py
dvs/types/: document.py  point.py  search_request.py
dvs/utils/: is_.py  logger.py  qs.py  sql_stmts.py  vss.py
dvs/utils/datasets/: __init__.py  bbc.py
examples/: bbc_simple_demo.py  documents.duckdb
manifest/: .env.hints
scripts/: build_example_datasets.py  build_example_datasets_by_client.py  download_datasets.py  download_db.sh  run_benchmark.ipynb  run_benchmark.py
search/: search_index.json
tests/: conftest.py  test_apis.py  test_dvs.py  test_qs.py  test_readme_usages.py
tests/dvs/: test_dvs.py  test_dvs_db_documents.py  test_dvs_db_manifest.py  test_dvs_db_points.py
tests/utils/: test_cache.py  test_is.py
